# ARTIFICIAL_INTELLIGENCE_BASICS

./: README.md  pyproject.toml
lab1/: lab_1.ipynb
lab2/: lab_2.ipynb
lab3/: lab_3.ipynb
lab6/: lab_6.ipynb
lab7/: lab_7.ipynb  lab_7_new.ipynb
