[tool.poetry]
name = "artificial-intelligence-basics"
version = "0.1.0"
description = "AI course laboratories at AGH"
authors = ["dmarek03 <domarek@student.agh.edu.pl>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
notebook = "^7.2.2"
numpy = "^2.1.2"
pandas = "^2.2.3"
matplotlib = "^3.9.2"
scikit-learn = "^1.5.2"
missingno = "^0.5.2"
statsmodels = "^0.14.4"
jupyterlab = "^4.2.5"
jupyterlab-execute-time = "^3.2.0"
jupytext = "^1.16.4"
imblearn = "^0.0"
lightgbm = "^4.5.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
