[tool.poetry]
    name = "artificial-intelligence-basics"
    version = "0.1.0"
    description = "AI course laboratories at AGH"
    authors = ["dmarek03 <domarek@student.agh.edu.pl>"]
    license = "MIT"
    readme = "README.md"

    [tool.poetry.dependencies]
        python = "^3.11"
        notebook = "^7.2.2"
        pandas = "^2.2.3"
        numpy = "1.26.4"
        matplotlib = "^3.9.2"
        scikit-learn = "^1.5.2"
        missingno = "^0.5.2"
        statsmodels = "^0.14.4"
        jupyterlab = "^4.2.5"
        jupyterlab-execute-time = "^3.2.0"
        jupytext = "^1.16.4"
        imblearn = "^0.0"
        lightgbm = "^4.5.0"

        # ===========================================
        # =========== START OF TORCH PART ===========
        torch       = { version = "^2.3", source = "pytorch-cpu", markers = "extra=='cpu' and extra!='cuda'" }
        torchvision = { version = "^0.18", source = "pytorch-cpu", markers = "extra=='cpu' and extra!='cuda'" }
    ipywidgets = "^8.1.5"
    optuna = "^4.1.0"
    opencv-python = "^4.10.0.84"
    black = {extras = ["jupyter"], version = "^24.10.0"}
    kagglehub = "^0.3.4"


    [tool.poetry.group.cuda]
    optional = true

        # https://github.com/pytorch/pytorch/blob/main/RELEASE.md#release-compatibility-matrix
        [tool.poetry.group.cuda.dependencies]
        torch       = { version = "^2.3", source = "pytorch-cuda", markers = "extra=='cuda' and extra!='cpu'" }
        torchvision = { version = "^0.18", source = "pytorch-cuda", markers = "extra=='cuda' and extra!='cpu'" }


[tool.poetry.extras]
    cpu  = ["torch", "torchvision"]
    cuda = ["torch", "torchvision"]

[[tool.poetry.source]]
    name     = "pytorch-cuda"
    priority = "explicit"
    url      = "https://download.pytorch.org/whl/cu121"

[[tool.poetry.source]]
    name     = "pytorch-cpu"
    priority = "explicit"
    url      = "https://download.pytorch.org/whl/cpu"

    # ============ END OF TORCH PART ============
    # ===========================================

[build-system]
    requires = ["poetry-core"]
    build-backend = "poetry.core.masonry.api"
